tests/fail/const_arrow.c
const struct
{
    int x;
} y;

void foo()
{
    y.x = 0;
}
